plugins {
    id 'org.springframework.boot' version '3.1.12'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'war'
    id 'com.diffplug.spotless' version '6.11.0'
}

war {
    enabled = false
}

group = 'ar.com.gtsoftware'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "21"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url "https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts"
    }
}

dependencies {
    //implementation 'org.springframework.boot:spring-boot-dependency-tools'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'org.springframework.boot:spring-boot-starter-activemq'
    implementation 'org.springframework.ws:spring-ws-security'
    implementation 'org.springframework.ws:spring-ws-core'
    testImplementation 'org.springframework.ws:spring-ws-test'
    implementation 'org.glassfish.jaxb:jaxb-runtime'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql:42.7.2'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"

    testCompileOnly 'org.projectlombok:lombok:1.18.42'

    testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'

    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-collections4:4.4'
    compileOnly 'org.hibernate.orm:hibernate-jpamodelgen:6.2.45.Final'
    annotationProcessor 'org.hibernate.orm:hibernate-jpamodelgen'
    implementation 'org.liquibase:liquibase-core'
    compileOnly 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.82'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.82'
    implementation 'net.sf.jasperreports:jasperreports:6.20.0'
    implementation 'net.sf.jasperreports:jasperreports-fonts:6.20.0'
    implementation 'com.lowagie:itext:2.1.7'
    implementation 'net.sf.barcode4j:barcode4j:2.1'
    implementation 'org.apache.xmlgraphics:batik-bridge:1.13'
    implementation 'org.jeasy:easy-rules-core:4.1.0'
    implementation 'org.jeasy:easy-rules-mvel:4.1.0'
    implementation 'org.apache.poi:poi-ooxml:5.0.0'
    implementation 'com.lowagie:itext:2.1.7.js6'
    implementation "jakarta.servlet:jakarta.servlet-api:6.0.0"
    implementation 'com.google.zxing:core:3.5.1'
}

test {
    useJUnitPlatform()
    maxParallelForks = Runtime.runtime.availableProcessors() / 2 ?: 1
}

spotless {
    java {
        googleJavaFormat()
    }
}
targetCompatibility = JavaVersion.VERSION_21
